--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.remindetti"
+        applicationId "com.udacity.project4"
         minSdk 21
         targetSdk 32
         versionCode 1
